# xvi

./: .gitignore  .gitmodules  ASYNC_STUBS_COMPLETION_REPORT.md  CLAUDE.md  CODEBASE_REVIEW.md  CONTEXT_HANDLERS_PORT.md  CONTRIBUTING.md  PROGRESS.md  README.md  bench_blockchain.txt  bench_evm_run.txt  bench_state.txt  bench_trie.txt  bench_txpool.txt  build.zig  build.zig.md  build.zig.zon  build_db_test.txt  build_nethermind_diff.txt  build_specs_blockchain.txt  build_sync_tests_run.txt  build_unit.txt  build_unit_after_chain_fix.txt  build_unit_after_patches.txt  build_unit_after_review.txt  build_unit_run_now.txt  check_voltaire_primitives.mjs  package.json  rpc_server_unit_tests.txt  test_blockchain_run.txt  test_runner.zig  test_runner.zig.md  test_storage_injector_standalone.zig  tsconfig.json  voltaire
.githooks/: commit-msg  pre-commit
client/: bench_utils.zig  cli.zig  config.zig  main.zig
client-ts/: package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
cloudflare/: README.md  genesis-worker.ts  wrangler.toml
docs/: bytecode-port-report.md  test-suite-findings.md
examples/: bytecode-validation.ts
lib/: README.md  bls_wrapper.zig.md  blst.zig  blst.zig.md  bn254.zig  bn254.zig.md  build.zig  build.zig.md  c-kzg.zig  c-kzg.zig.md  crypto_stubs.c  foundry.zig  foundry.zig.md  root.zig  root.zig.md
lib/ark/: Cargo.toml  README.md  bn254_wrapper.h
lib/ark/src/: lib.rs
lib/foundry-compilers/: Cargo.toml  README.md  build.rs  compiler.zig  package.zig  rust_build.zig
lib/foundry-compilers/src/: lib.rs
prd/: ETHEREUM_SPECS_REFERENCE.md  (+1 more)
(+651 files in other folders)
