[package]
name = "bn254_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "bn254_wrapper"
crate-type = ["staticlib"]

[dependencies]
# Using arkworks for BN254 elliptic curve operations - from workspace
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
# BLS12-381 support for EIP-2537 precompiles - from workspace
ark-bls12-381 = { workspace = true }

